--- a/style.css
+++ b/style.css
@@ -55,31 +55,39 @@
 }
 .social-card {
     height: 55%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-   
+   /* background-color: white; */
+    padding: 20px;
+    border-radius: 8px;
 }
 .social-card p {
-    background-color:  hsl(0, 0%, 20%); 
+    /* width: 100%; */
+    /* background-color:  hsl(0, 0%, 20%);  */
     font-size: 18px;
     font-weight: 600;
     cursor: pointer;
-    padding: 10px;
-    border-radius: 6px;
+    padding: 12px;
+    
     transition: background-color 0.3s, color 0.3s;
 
 }
-.social-card p:hover {
+/* .social-card p:hover {
     background-color: hsl(75, 94%, 57%);
   
-}
+} */
 .social-card a:hover{
     color: rgb(0, 0, 0);
+    background-color: hsl(75, 94%, 57%);
 }
-.social-card p a {
+.social-card  a {
     text-decoration: none;
    color: hsl(0, 0%, 100%);
+   background-color: hsl(0, 0%, 20%);
+   margin-bottom: 7px;
+   border-radius: 6px;
 }
 
 
